=== 2.0 (2018-xx-xx)

- ported to OpenSSL 1.1.x
- add support for pkcs11-based hardware tokens
	(Patch from Leif Johansson)
- improved error reporting of timestamping errors
        (Patch from Carlo Teubner)

=== 1.7.1 (2014-07-11)

- MSI: added -add-msi-dse option
	(Patch from Mikkel Krautz)
- MSI: fix build when GSF_CAN_READ_MSI_METADATA defined
	(Patch from Mikkel Krautz)

=== 1.7 (2014-07-10)

- add support for nested signatures
	(Patch from Mikkel Krautz)
- fix compilation problem with OpenSSL < 1.0.0
- added OpenSSL linkage exception to license

=== 1.6 (2014-01-21)

- add support for reading password from file
- add support for asking for password (on systems that
  provide support for it)
- add support for compiling and running on Windows
	 (Patch from Heiko Hund)
- fix compilation without curl
	 (Fix from Heiko Hund)
- added support for giving multiple timestamp servers
  as arguments (first one that succeeds will be used)
- signatures on hierarchical MSI files were broken
	 (Fix from Mikkel Krautz)
- MSI: Add support for MsiDigitalSignatureEx signature
	 (Patch from Mikkel Krautz)
- add support for adding additional/cross certificates
  through -ac option
	 (Thanks to Lars Munch for idea + testing)
- MSI: Add support for signature extract/remove/verify
	 (Patches from Mikkel Krautz)
- PE/MSI: Implement -require-leaf-hash for verify.
	 (Patch from Mikkel Krautz)

=== 1.5.2 (2013-03-13)

- added support for signing with SHA-384 and SHA-512
- added support for page hashing (-ph option)

=== 1.5.1 (2013-03-12)

- forgot to bump version number...

=== 1.5 (2013-03-12)

- added support for signing MSI files (patch from Marc-André Lureau)
- calculate correct PE checksum instead of setting it to 0
	 (patch from Roland Schwingel)
- added support for RFC3161 timestamping (-ts option)
- added support for extracting/removing/verifying signature on PE files
- fixed problem with not being able to decode timestamps with no newlines