@@ -1,5 +1,2 @@
-softhsm.conf
 test.*
-openssl.conf
 config.py
-softhsm.*
