@@ -11,8 +11,8 @@ Type 'make' to generate a softhsm token with a test-key on id a1b2 with PIN-code
 "secret1". To use this token with osslsigncode try something like this (from this 
 directory):
 
-env SOFTHSM_CONF=`pwd`/softhsm.conf ../../osslsigncode sign \
-   -pkcs11engine /usr/lib/engines/engine_pkcs11.so \
-   -pkcs11module /usr/lib/softhsm/libsofthsm.so -key a1b2 -certs test.crt ...
+../../osslsigncode sign \
+   -pkcs11engine /usr/lib/engines-1.1/pkcs11.so \
+   -pkcs11module /usr/lib/libsofthsm2.so -key a1b2 -certs test.crt ...
 
 Use 'secret1' as the password at the prompt.
